sassi-macros/tests/compile_fail/cacheable_unknown_option.stderr
error: Cacheable: unsupported #[cacheable(...)] option
 --> tests/compile_fail/cacheable_unknown_option.rs:6:13
  |
6 | #[cacheable(foo = "bar")]
  |             ^^^
